<resources>
    <string name="app_name">HotelGo</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sign_up_disini">Sign up disini</string>
    <string name="hotel_go">Hotel Go</string>
    <string name="ulangi_password">Ulangi password</string>
    <string name="register">Register</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="sign_in_disini">Sign in disini</string>
    <string name="home">Home</string>
    <string name="pencarian">Pencarian</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Logout</string>
    <string name="pemberitahuan">Pemberitahuan</string>
    <string name="lokasi">Lokasi</string>
    <string name="hubungi">Hubungi</string>
    <string name="informasi">Informasi</string>
    <string name="ketersediaan">Ketersediaan</string>
    <string name="umum">Umum</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="belum_diisi">Belum diisi</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="kontak">Kontak</string>
    <string name="telefon">Telefon</string>
    <string name="akun">Akun</string>
    <string name="simpan_perubahan">Simpan perubahan</string>
    <string name="harga_dimulai_dari">Mulai dari %s</string>
    <string name="lihat_lokasi">Lihat Lokasi</string>
    <string name="batalkan">Batalkan</string>
    <string name="imagedetail">imageDetail</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="detail">Detail</string>
    <string name="deskripsi">Deskripsi :\n%s</string>
    <string name="image_pemesanan">Image Pemesanan</string>
    <string name="harga">Harga %s</string>
    <string name="kamar_sisa">Sisa kamar : %s</string>
    <string name="kapasitas">Kapasitas : %s orang</string>
    <string name="jenis_kamar">Jenis Kamar :</string>
    <string name="jumlah_kamar">Jumlah Kamar :</string>
    <string name="total">Total :</string>
    <string name="cancel">Cancel</string>
    <string name="pesan_kamar">Pesan Kamar</string>
    <string name="rp_0">Rp. 0</string>
    <string name="_1">1</string>
    <string name="booking_success">Booking success</string>
    <string name="booking_failed">Booking failed</string>
    <string name="doubleclick">Double click..</string>
    <string name="detailHotel">Detail Hotel</string>
    <string name="berhasil_disimpan">Profile anda berhasil disimpan</string>
    <string name="gagal_disimpan">Profile gagal disimpan</string>
    <string name="nama_hotel">Nama Hotel : %s</string>
    <string name="jenis_kamar_booking">Jenis Kamar : %s</string>
    <string name="jumlah_kamar_booking">Jumlah Kamar : %s</string>
    <string name="total_harga_booking">Total Harga : %s</string>
    <string name="status">Status : %s</string>
    <string name="ubah_password">Ubah password</string>
</resources>
