<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    android:minWidth="300dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progress_alert"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/pemesanan"
        android:gravity="center"
        android:background="@color/blue"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/jenis_kamar"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt_pemesananAlert_jenisKamar"
            android:text="Single Room"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/jumlah_kamar"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_pemesananAlert_jumlahKamar"
            android:text="@string/_1"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/total"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="right"
            android:id="@+id/txt_pemesananAlert_total"
            android:text="@string/rp_0"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_pemesananAlert_booking"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/booking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginLeft="8dp"
            android:id="@+id/btn_pemesananAlert_cancel"
            android:layout_weight="1"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>