<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardElevation="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <LinearLayout
      android:layout_margin="16dp"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
          android:layout_weight="1"
          android:orientation="vertical"
          android:layout_width="0dp"
          android:layout_height="wrap_content">
          <TextView
              android:id="@+id/txt_bookingItem_namaHotel"
              android:text="@string/nama_hotel"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
          <TextView
              android:id="@+id/txt_bookingItem_jenisKamar"
              android:text="@string/jenis_kamar_booking"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
          <TextView
              android:id="@+id/txt_bookingItem_jumlahKamar"
              android:text="@string/jumlah_kamar_booking"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
          <TextView
              android:id="@+id/txt_bookingItem_total"
              android:text="@string/total_harga_booking"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
          <TextView
              android:id="@+id/txt_status"
              android:layout_marginTop="16dp"
              android:textColor="@color/red"
              android:text="@string/status"
              android:layout_marginRight="8dp"
              android:gravity="right"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
      </LinearLayout>
      <LinearLayout
          android:orientation="vertical"
          android:gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="match_parent">
          <ImageView
              android:id="@+id/img_bookinglayout_lokasi"
              android:src="@drawable/ic_person_pin_circle"
              android:layout_width="40dp"
              android:layout_height="40dp"/>
      </LinearLayout>
  </LinearLayout>
</androidx.cardview.widget.CardView>