<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/linear_bottom_login"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textSize="50sp"
            android:text="@string/hotel_go"
            android:gravity="center"
            android:fontFamily="@font/sriracha"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/textInputLayout_email"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_login_email"
                android:inputType="textEmailAddress"
                android:hint="@string/e_mail"
                android:textColor="@color/dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_password"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_login_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            app:spinning_bar_color="#FFF"
            app:spinning_bar_width="4dp"
            app:spinning_bar_padding="6dp"
            android:layout_gravity="center"
            android:id="@+id/btn__login_login"
            android:layout_marginTop="16dp"
            android:background="@drawable/round"
            android:textColor="@color/white"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/linear_bottom_login"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:textColor="@color/white"
            android:text="@string/belum_punya_akun"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:text="@string/sign_up_disini"
            android:gravity="center"
            android:id="@+id/txt_login_tryregister"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>