<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/register"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.Register">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_bottom_register"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_register_email"
                android:inputType="textEmailAddress"
                android:hint="@string/e_mail"
                android:textColor="@color/dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_password"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_register_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_repeatPassword"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_register_repeatPassword"
                android:inputType="textPassword"
                android:hint="@string/ulangi_password"
                android:textColor="@color/dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            app:spinning_bar_color="#FFF"
            app:spinning_bar_width="4dp"
            app:spinning_bar_padding="6dp"
            android:layout_gravity="center"
            android:id="@+id/btn_register_register"
            android:background="@drawable/round"
            android:textColor="@color/white"
            android:text="@string/register"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bottom_register"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:textColor="@color/white"
            android:text="@string/sudah_memiliki_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/sign_in_disini"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>