<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".ui.main_menu.profile.ProfileFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_image"
        android:src="@drawable/ic_person_white"
        android:layout_width="100dp"
        android:background="@drawable/round_light"
        android:layout_height="100dp"
        android:contentDescription="@string/profile"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/img_profile_changeProfile"
        app:layout_constraintRight_toRightOf="@id/img_profile_image"
        app:layout_constraintBottom_toBottomOf="@id/img_profile_image"
        android:src="@drawable/ic_photo_camera"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/img_profile_image"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/cream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/umum"
                    android:textColor="@color/white"
                    android:id="@+id/txt_profile_umum"
                    android:paddingStart="8dp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:paddingEnd="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_edit"
                    android:id="@+id/img_profile_editUmum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_profile_nama"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_profile_namaLengkap"
                    android:hint="@string/nama_lengkap"
                    android:text="@string/belum_diisi"
                    android:textColor="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_profile_jk"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_profile_jk"
                    android:hint="@string/jenis_kelamin"
                    android:text="@string/belum_diisi"
                    android:textColor="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_profile_ttl"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_profile_ttl"
                    android:hint="@string/tanggal_lahir"
                    android:text="@string/belum_diisi"
                    android:textColor="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_profile_alamat"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_profile_alamat"
                    android:hint="@string/alamat"
                    android:text="@string/belum_diisi"
                    android:textColor="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:background="@color/cream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/kontak"
                    android:textColor="@color/white"
                    android:id="@+id/txt_profile_kontak"
                    android:paddingStart="8dp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:paddingEnd="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_edit"
                    android:id="@+id/img_profile_editkontak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_profile_email"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_profile_email"
                    android:hint="@string/e_mail"
                    android:text="@string/belum_diisi"
                    android:textColor="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_profile_notelp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_profile_notelp"
                    android:hint="@string/telefon"
                    android:inputType="number"
                    android:text="@string/belum_diisi"
                    android:textColor="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:background="@color/cream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/ubah_password"
                    android:textColor="@color/white"
                    android:id="@+id/txt_profile_akun"
                    android:paddingStart="8dp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:paddingEnd="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_edit"
                    android:id="@+id/img_profile_editakun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_profile_password"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edt_profile_password"
                    android:hint="@string/password"
                    android:text="@string/belum_diisi"
                    android:textColor="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_profile_ulangiPass"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edt_profile_ulangiPass"
                    android:hint="@string/ulangi_password"
                    android:text="@string/belum_diisi"
                    android:textColor="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                app:spinning_bar_color="#FFF"
                app:spinning_bar_width="4dp"
                app:spinning_bar_padding="6dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:id="@+id/btn_profile_simpanPerubahan"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:text="@string/simpan_perubahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>